--- a/whatsapp-clone/src/app/app.component.html
+++ b/whatsapp-clone/src/app/app.component.html
@@ -6,7 +6,8 @@
   <div id="sideBar">
     <div id="sideBarHeader"></div>
     <div id="searchBox">
-      <input id="sideBarInput" type="text" placeholder = "search or start a new chat">
+      <img width = "30"  height = "35" src="../assets/images/searchIcon.png">
+      <input type="text" placeholder = "search or start a new chat">
     </div>
     <div id="noConversations">
       All chats are archived
