--- a/whatsapp-clone/src/app/app.component.scss
+++ b/whatsapp-clone/src/app/app.component.scss
@@ -43,12 +43,30 @@
     flex-basis: 50px;
     border-bottom: 1px solid #e1e4e5;
     background-color: #fbfbfb;
-}
-#sideBarInput
-{
-    width : 90%;
-    border: 1px solid #f3f3f3;
-    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img
+    {
+        position: absolute;
+        left: 14px;
+    }
+    input
+    {
+        width : calc(90% - 60px);
+        border : none;
+        border-radius: 20px;
+        height: 70%;
+        padding-left: 60px;
+        color: #a4a4a4;
+        outline: none;
+        box-shadow: 0px 0px 3px #efefef;
+        &::placeholder
+        {
+            color: #a4a4a4;
+            font-weight: 100;
+        }
+    }
 }
 #noConversations
 {
