--- a/whatsapp-clone/src/app/app.component.html
+++ b/whatsapp-clone/src/app/app.component.html
@@ -3,17 +3,7 @@
 
 
 <div id="chatContainer">
-  <div id="sideBar">
-    <div id="sideBarHeader"></div>
-    <div id="searchBox">
-      <img width = "30"  height = "35" src="../assets/images/searchIcon.png">
-      <input type="text" placeholder = "search or start a new chat">
-    </div>
-    <div id="noConversations">
-      All chats are archived
-    </div>
-    <div id="sideBarContent"></div>
-  </div>
+  <app-sidebar></app-sidebar>
   <div id="chat"></div>
 </div>
 
