--- a/whatsapp-clone/src/app/app.component.scss
+++ b/whatsapp-clone/src/app/app.component.scss
@@ -24,56 +24,11 @@
 
     border-radius: 3px;
     display: flex;
-    flex-direction: row;
-}
-#sideBar
-{
-    flex-basis: 30%;
-    border-right: 1px solid #e1e4e5;
-    display: flex;
-    flex-direction: column;
-}
-#sideBarHeader
-{
-    flex-basis: 67px;
-    background-color: #eeeeee;
-}
-#searchBox
-{
-    flex-basis: 50px;
-    border-bottom: 1px solid #e1e4e5;
-    background-color: #fbfbfb;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img
-    {
-        position: absolute;
-        left: 14px;
+    flex-direction: row; 
+    overflow: hidden;
+
+    app-sidebar{
+        flex-basis : 30%;
+        display: block;
     }
-    input
-    {
-        width : calc(90% - 60px);
-        border : none;
-        border-radius: 20px;
-        height: 70%;
-        padding-left: 60px;
-        color: #a4a4a4;
-        outline: none;
-        box-shadow: 0px 0px 3px #efefef;
-        &::placeholder
-        {
-            color: #a4a4a4;
-            font-weight: 100;
-        }
-    }
-}
-#noConversations
-{
-    padding-top: 30px;
-    text-align: center;
-    color: #b9b9b9;
-    font-size: 18px;
-    font-family: sans-serif;
-    font-weight: 100;
 }
